Sat Oct 28 02:33:09 2000  Robert Brady  <robert@suse.co.uk>

	* gtk/gtkmarshal.list: add new marshallers for GtkTextView.

	* gtk/gtktextview.c: Use correct marshallers.

Fri Oct 27 17:56:26 2000  Jonathan Blandford  <jrb@redhat.com>

	* gtk/gtkliststore.c: Not sure how this ever worked.  Fixed it to
	use new iter stuff, and added all the appropriate signals et al.

	* gtk/gtktreedatalist.h: s/gtk/_gtk to further reinforce that this
	code is internal to gtk only.

2000-10-28  Tor Lillqvist  <tml@iki.fi>

	* gtk/gtk.def
	* gtk/makefile.{mingw,msc}.in: Adjust to Tim's changes. Use
	glib-genmarshal etc.

Fri Oct 27 20:15:00 2000  Tim Janik  <timj@gtk.org>

	* gtk/Makefile.am: added dependancies for testtextbuffer which broke
	parallel builds.

Fri Oct 27 18:51:44 2000  Tim Janik  <timj@gtk.org>

	* gtk/gtksignal.[hc]: adapt to GSignal signature changes.

2000-10-27  Robert Brady  <robert@suse.co.uk>

	* configure.in (ALL_LINGUAS): Add en@IPA (English, phonetic), 
	en_GB (British), ia (Interlingua).

2000-10-26  Havoc Pennington  <hp@redhat.com>

	* gtk/gtktextiter.c (my_strrstr): fix constness warning

        Fixed output of:
	nm -g -l .libs/libgtk-x11-1.3.so | grep ' T ' | grep -v gtk_ | grep -v GTK_
	
	* gtk/gtktextsegment.c (char_segment_new): rename
	(_char_segment_new_from_two_strings): rename
	(_toggle_segment_new): rename
	
	* gtk/gtkclipboard.c (ensure_clipboard_widget): make this static
	(make_clipboard_widget): make it static
	(text_get_func): static
	(text_clear_func): static

	* gtk/gtkcolorsel.c (adjustment_changed): make this function
	static
	(hex_changed): make it static
	(hsv_changed): make it static
	(opacity_entry_changed): make it static

	* gtk/gtktextbtree.c (change_node_toggle_count): rename with _gtk
	(toggle_segment_check_func): rename with _gtk

	* gtk/gtktextchild.c (_pixbuf_segment_new): rename with _gtk
	(_widget_segment_new): rename
	(_widget_segment_add): rename
	(_widget_segment_remove): rename
	(_widget_segment_ref): rename